--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 		</div>
 	</div>
 	
-	<div id="fh5co-footer">
+	<!-- <div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -567,7 +567,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
