--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Create attractive and responsive web designs to ensure an optimal user experience.</p>
 							</div>
 						</div>
 					</div>
@@ -232,7 +232,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Branding</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Help develop a strong and consistent brand identity, including logo, color palette, and typography.</p>
 							</div>
 						</div>
 
@@ -244,7 +244,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Analytics</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Provide in-depth analytics to monitor website performance and visitor behavior, aiding in informed decision-making.</p>
 							</div>
 						</div>
 					</div>
@@ -260,7 +260,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Developent</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Build functional and secure websites using the latest technology to meet your business needs.</p>
 							</div>
 						</div>
 
@@ -273,7 +273,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Design effective digital marketing strategies to enhance online visibility and attract more visitors.</p>
 							</div>
 						</div>
 
@@ -285,7 +285,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Offer ongoing support to ensure your website runs smoothly and stays updated.</p>
 							</div>
 						</div>
 					</div>
@@ -306,14 +306,14 @@
 					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+					<div class="chart" data-percent="95"><span><strong>CSS3</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>JavaScript</strong>90%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+					<div class="chart" data-percent="80"><span><strong>PHP</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
@@ -355,10 +355,10 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Java</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
 						  </div>
 						</div>
 					</div>
@@ -450,7 +450,6 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Post on Netlify</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -458,9 +457,9 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
+							<span class="posted_on">Nov. 17th 2023</span>
 							<h3><a href="#">Quantum Web</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>This project creates a platform website for hiring front-end services. Users can search, book services, view profiles, reviews, and make secure payments.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
@@ -473,9 +472,9 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
+							<span class="posted_on">Jan. 12th 2024</span>
 							<h3><a href="#">Wheather APP</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>This project develops a weather app to check the weather in specific cities. Users can search for cities, view current weather conditions, forecasts, and receive weather alerts.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
@@ -488,9 +487,9 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
+							<span class="posted_on">May. 10th 2024</span>
 							<h3><a href="#">VOGUE School</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>This project creates a platform for online courses. Users can browse courses, enroll, access lessons, and track their progress. The platform includes features like video lectures, quizzes, and certificates.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
