--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>Thank you for exploring my portfolio. It's been a pleasure sharing my creative endeavors with you. I'm deeply committed to continual growth and improvement. If you're keen on collaboration or have any questions, I'm just a message away. Let's discuss potential ventures together. Excited to hear from you soon!</p>
+					<p><a href="#" class="btn btn-default btn-lg">Contact Me</a></p>
 				</div>
 			</div>
 		</div>
