--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 							<h3><span>Web Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-github2"></i></a></li>
+									<li><a href="https://x.com/egbert_felica" target="_blank"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100021206631576" target="_blank"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/egbert-felica-wibianto-975a16227/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/Orang9" target="_blank"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -103,15 +103,15 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>My name is Egbert Felica Wibianto, a graduate of Information Technology from Bakrie University specializing in Frontend Development. I have experience in designing and implementing UI for website projects, which has strengthened my technical skills in front-end development.</p>
+					<p>My name is Egbert Felica Wibianto, a student of Information Technology at Bakrie University specializing in Frontend Development. I have experience in designing and implementing UI for website projects, which has strengthened my technical skills in front-end development.</p>
 					<p>I am proficient in programming languages essential for web development and am always enthusiastic about exploring the logic and structure behind various websites. I also possess the ability to work with various frontend tools and technologies.</p>
 					<p>My vision is to evolve into a proficient Full Stack Developer who not only understands the front-end aspect but also effectively manages the back-end. I believe that with a combination of my skills and passion for continuous learning, I can make significant contributions to any project I undertake.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-github2"></i></a></li>
+							<li><a href="https://x.com/egbert_felica" target="_blank"><i class="icon-twitter2"></i></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100021206631576" target="_blank"><i class="icon-facebook2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/egbert-felica-wibianto-975a16227/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://github.com/Orang9" target="_blank"><i class="icon-github2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -136,8 +136,8 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelor of Science in Informatics</h3>
-									<span class="company">University Bakrie - 2023 - 2027</span>
+									<h3 class="timeline-title">Informatics major</h3>
+									<span class="company">University Bakrie - 2023 - current</span>
 								</div>
 								<div class="timeline-body">
 									<p>GPA: 3.7</p>
@@ -303,62 +303,62 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+					<div class="chart" data-percent="85"><span><strong>HTML5</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>CSS3</strong>95%</span></div>
+					<div class="chart" data-percent="85"><span><strong>CSS3</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>JavaScript</strong>90%</span></div>
+					<div class="chart" data-percent="80"><span><strong>JavaScript</strong>80%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="80"><span><strong>PHP</strong>80%</span></div>
+					<div class="chart" data-percent="75"><span><strong>PHP</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+					<div class="chart" data-percent="75"><span><strong>MySQL</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>ReactJS</strong>90%</span></div>
+					<div class="chart" data-percent="80"><span><strong>ReactJS</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Python</strong>85%</span></div>
+					<div class="chart" data-percent="75"><span><strong>Python</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
+					<div class="chart" data-percent="80"><span><strong>Java</strong>80%</span></div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
+						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:85%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">WordPress</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><span class="name-left">PHP</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">Java</span><span class="value-right">80%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:80%">
 						  </div>
 						</div>
 					</div>
@@ -373,26 +373,26 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">ReactJS</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">ReactJS</span><span class="value-right">80%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:80%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Python</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">JavaScript</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">JavaScript</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:85%">
 						  </div>
 						</div>
 					</div>
@@ -410,7 +410,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.png);">
+					<a href="https://gamesplay.cloud/" target="_blank" class="work" style="background-image: url(images/portfolio-1.png);">
 						<div class="desc">
 							<h3>Quantum Web</h3>
 							<span>Illustration</span>
@@ -418,7 +418,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.png);">
+					<a href="https://spectacular-dango-071289.netlify.app/" target="_blank" class="work" style="background-image: url(images/portfolio-2.png);">
 						<div class="desc">
 							<h3>Wheather APP</h3>
 							<span>Brading</span>
@@ -426,7 +426,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.png);">
+					<a href="https://vogueschool-dev-env.netlify.app/" target="_blank" class="work" style="background-image: url(images/portfolio-3.png);">
 						<div class="desc">
 							<h3>VOGUE School</h3>
 							<span>Illustration</span>
@@ -434,7 +434,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.png);">
+					<a href="https://bejewelled-otter-1fbf7e.netlify.app/" target="_blank" class="work" style="background-image: url(images/portfolio-4.png);">
 						<div class="desc">
 							<h3>Card</h3>
 							<span>Design</span>
@@ -455,7 +455,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.png);"></a>
+						<a href="https://gamesplay.cloud/" target="_blank" class="blog-bg" style="background-image: url(images/portfolio-1.png);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Nov. 17th 2023</span>
 							<h3><a href="#">Quantum Web</a></h3>
@@ -470,7 +470,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.png);"></a>
+						<a href="https://spectacular-dango-071289.netlify.app/" target="_blank" class="blog-bg" style="background-image: url(images/portfolio-2.png);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Jan. 12th 2024</span>
 							<h3><a href="#">Wheather APP</a></h3>
@@ -485,7 +485,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.png);"></a>
+						<a hhref="https://vogueschool-dev-env.netlify.app/" target="_blank" class="blog-bg" style="background-image: url(images/portfolio-3.png);"></a>
 						<div class="blog-text">
 							<span class="posted_on">May. 10th 2024</span>
 							<h3><a href="#">VOGUE School</a></h3>
