--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	//////////////////////////////////////////////////////
 	 -->
 
-  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -37,26 +36,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 
-	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
 
 	</head>
 	<body>
-		
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
@@ -70,14 +59,12 @@
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 							<h1><span>Egbert Felica Wibianto</span></h1>
 							<h3><span>Web Developer</span></h3>
-							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://x.com/egbert_felica" target="_blank"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://www.facebook.com/profile.php?id=100021206631576" target="_blank"><i class="icon-facebook2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/egbert-felica-wibianto-975a16227/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/Orang9" target="_blank"><i class="icon-github2"></i></a></li>
 								</ul>
-							</p>
 						</div>
 					</div>
 				</div>
@@ -106,14 +93,12 @@
 					<p>My name is Egbert Felica Wibianto, a student of Information Technology at Bakrie University specializing in Frontend Development. I have experience in designing and implementing UI for website projects, which has strengthened my technical skills in front-end development.</p>
 					<p>I am proficient in programming languages essential for web development and am always enthusiastic about exploring the logic and structure behind various websites. I also possess the ability to work with various frontend tools and technologies.</p>
 					<p>My vision is to evolve into a proficient Full Stack Developer who not only understands the front-end aspect but also effectively manages the back-end. I believe that with a combination of my skills and passion for continuous learning, I can make significant contributions to any project I undertake.</p>
-					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://x.com/egbert_felica" target="_blank"><i class="icon-twitter2"></i></a></li>
 							<li><a href="https://www.facebook.com/profile.php?id=100021206631576" target="_blank"><i class="icon-facebook2"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/egbert-felica-wibianto-975a16227/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="https://github.com/Orang9" target="_blank"><i class="icon-github2"></i></a></li>
 						</ul>
-					</p>
 				</div>
 			</div>
 		</div>
@@ -168,9 +153,6 @@
 									<h3 class="timeline-title">Frontend Developer</h3>
 									<span class="company">Group Project on Education Website - 2024 - 2024</span>
 								</div>
-								<!-- <div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div> -->
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
@@ -180,9 +162,6 @@
 									<h3 class="timeline-title">Full Stack Developer</h3>
 									<span class="company">Personal Project - 2024 - 2024</span>
 								</div>
-								<!-- <div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div> -->
 							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
@@ -192,9 +171,6 @@
 									<h3 class="timeline-title">Frontend Developer</h3>
 									<span class="company">Personal Project - 2024 - 2024</span>
 								</div>
-								<!-- <div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div> -->
 							</div>
 						</li>
 			    	</ul>
@@ -303,101 +279,31 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>HTML5</strong>85%</span></div>
+					<div class="chart" data-percent="100"><span><strong>HTML5</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>CSS3</strong>85%</span></div>
+					<div class="chart" data-percent="100"><span><strong>CSS3</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="80"><span><strong>JavaScript</strong>80%</span></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="75"><span><strong>PHP</strong>75%</span></div>
+					<div class="chart" data-percent="100"><span><strong>JavaScript</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="75"><span><strong>MySQL</strong>75%</span></div>
+					<div class="chart" data-percent="100"><span><strong>PHP</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="80"><span><strong>ReactJS</strong>80%</span></div>
+					<div class="chart" data-percent="100"><span><strong>MySQL</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="75"><span><strong>Python</strong>75%</span></div>
+					<div class="chart" data-percent="100"><span><strong>ReactJS</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="80"><span><strong>Java</strong>80%</span></div>
+					<div class="chart" data-percent="100"><span><strong>Python</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="100"><span><strong>Java</strong></span></div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">85%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">75%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">75%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">80%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-						  </div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="progress-wrap">
-						<h3><span class="name-left">Design</span><span class="value-right">80%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">ReactJS</span><span class="value-right">80%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">Python</span><span class="value-right">75%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">JavaScript</span><span class="value-right">85%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-						  </div>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</div>
 
@@ -557,40 +463,22 @@
 			</form>	
 		</div>
 	</div>
-	
-	<!-- <div id="fh5co-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
 	
-	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
 	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
 	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Stellar Parallax -->
 	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<script src="js/google_map.js"></script>
 	
-	<!-- Main -->
 	<script src="js/main.js"></script>
-
+		
 	</body>
 </html>
 
